loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:3: error: illegal start of simple expression
while ()
       ^LoopStairs:9: error: ')' expected but '}' found.
	}
        ^