loopfor.LoopStairs.scala.code
baisseBrosse()
avance(3)
while ()
gauche()
avance()
droite()
avance()